# physics_simulations

./: .gitignore  CMakeLists.txt
include/: main.h  particle.h
src/: main.c  particle.c
